# hub-labeling

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: edge.hh  heap.hh  heap_unit.cc  hl_trans.cc  hub_labeling.hh  int_util.hh  logging.hh  mgraph.hh  mgraph_unit.cc  pruned_landmark_labeling.hh  traversal.hh  tree_sampling.hh  unit.cc  unit.hh
